--- a/style.css
+++ b/style.css
@@ -151,10 +151,77 @@ ul {
 
   margin-right: 20px;
 }
-/*Cards Section*/
+/*Main Content Section*/
 
-.cards {
+.main {
   background-color: #e1ebf2;
   grid-column: 2/3;
-  grid-row: 2/3;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 20px;
+}
+.left-cards {
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-rows: auto;
+  justify-items: stretch;
+  align-items: center;
+  row-gap: 20px;
+  column-gap: 20px;
+  margin: 10px;
+  overflow: auto;
+}
+.left-text {
+  color: gray !important;
+  font-size: 15px;
+  font-weight: normal !important;
+}
+.card {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  color: black;
+  height: fit-content;
+  border-radius: 10px;
+  height: 60%;
+  border-left: solid 10px #f0b429;
+  box-shadow: rgba(50, 50, 105, 0.15) 0px 2px 5px 0px,
+    rgba(0, 0, 0, 0.05) 0px 1px 1px 0px;
+}
+.card-icons {
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  margin-bottom: 10px;
+}
+.card-icons > img {
+  margin-right: 20px;
+}
+.right-cards {
+  text-align: left;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(auto-fit, minmax(250px, 1fr));
+  justify-items: center;
+  align-items: center;
+  margin-right: 20px;
+}
+
+hr {
+  border: none;
+  border-top: 1px solid #ccc; /* Light grey color */
+  margin: 10px 0; /* Adjust spacing as needed */
+}
+.right-card {
+  border: none;
+  padding: 20px;
+  height: fit-content;
+}
+.right-text {
+  color: gray !important;
+  font-size: 15px;
+  font-weight: normal !important;
 }
